API - Creating endpoint to generate games with round robin
